src/articles: fixes the TOC layout issues

--- a/src/.kask/propagate/styles.css
+++ b/src/.kask/propagate/styles.css
@@ -19,18 +19,20 @@ html {
   margin: 0;
 
   scroll-behavior: smooth;
+  scroll-padding-top: 2em;
 }
 
 body {
   width: 100%;
   padding: 0;
   margin: 0;
+
+  display: grid;
+  grid-template-columns: minmax(2em, 1fr) minmax(auto, 700px) minmax(2em, 1fr);
 }
 
 main {
-  display: grid;
-  grid-template-columns: minmax(2em, 1fr) minmax(auto, 650px) minmax(2em, 1fr);
-  width: 100vw;
+  display: contents;
 
   & > * {
     grid-column: 2 / 3;
@@ -78,9 +80,10 @@ a {
 }
 
 nav {
-  padding: calc(2em - 10px);
-  margin: 0 auto;
+  padding: 2em 0;
+  margin: -10px -10px;
   width: min(100%, 700px);
+  grid-column: 2 / 3;
 
   display: flex;
   flex-direction: row;
